--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    sourceSets{
+        main.java.srcDirs = ['src/main/java','src/main/java-gen']
+    }
     buildTypes {
         release {
             minifyEnabled false
